# cryo-et-sample-data

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
examples/: hiv_dataset.py
src/cryo_et_sample_data/: __init__.py  _base.py  _data_set.py  _hiv.py  napari.yaml  utils.py
src/cryo_et_sample_data/_tests/: test_data_set.py  test_data_set_implementations.py  test_datasets.py  test_sample_data.py  test_sample_data_implementations.py  test_utils.py
