[metadata]
name = cryo-et-sample-data

description = Sample cryo-ET data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teamtomo/cryo-et-sample-data
author = Kevin Yamauchi
author_email = kevin.yamauchi@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/teamtomo/cryo-et-sample-data/issues
    Documentation = https://github.com/teamtomo/cryo-et-sample-data#README.md
    Source Code = https://github.com/teamtomo/cryo-et-sample-data
    User Support = https://github.com/teamtomo/cryo-et-sample-data/issues

[options]
packages = find:
install_requires =
    mrcfile
    numpy
    pooch
    pydantic

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    cryo-et-sample-data = cryo_et_sample_data:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
